--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ body {
   background-color: var(--light-secondary-color);
 }
 
+body,
+button {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1,
 h2,
 h3,
@@ -61,7 +66,9 @@ a {
 .basic-paragraph,
 .summary-label,
 .alert-message,
-.section-title {
+.section-title,
+.hex-color-list,
+button {
   font-size: 0.75rem;
 }
 
@@ -190,7 +197,8 @@ section::before {
 
 .inner-grid {
   display: grid;
-  grid-template-columns: minmax(0, 1.5em) repeat(2, 1fr);
+  grid-template-columns: minmax(0, 1.5em) 200px repeat(2, 1fr);
+  row-gap: 0.75em;
   /* grid-template-rows: 20px; */
 }
 
@@ -201,9 +209,14 @@ section::before {
 .section-title {
   grid-column: 1 / span 2;
   background-color: var(--secondary-color);
-  max-width: 100px;
   border-radius: 0 7px 7px 0;
   text-align: center;
+  margin-bottom: 0.5em;
+  max-width: 100px;
+}
+
+.fonts-section .section-title {
+  max-width: 170px;
 }
 
 @media (min-width: 768px) {
@@ -217,9 +230,27 @@ section::before {
 .icons-section > ul {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 /* ==== button section  layout ===== */
+
+.btn {
+  padding: 0.75em 1em;
+  width: 150px;
+  border: 0;
+  border-radius: 5px;
+}
+
+.primary-btn {
+  color: white;
+  background-color: var(--dark-blue-color);
+}
+
+.secondary-btn {
+  color: var(--dark-blue-color);
+  background-color: var(--secondary-color);
+}
 
 /* ===== colors section layout ===== */
 .colors-section {
